added transitions that don't work lol

--- a/package.json
+++ b/package.json
@@ -61,5 +61,9 @@
       "patterns": "**/*.less",
       "extensions": "less"
     }
+  },
+  "dependencies": {
+    "@barba/core": "^2.9.7",
+    "@barba/css": "^2.1.15"
   }
 }
